update exercise serice and config examination service
